Baseline build for Zaptok project created by MkStack

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>ZapTok - Nostr Video Platform</title>
+    <meta name="description" content="Discover and share videos on the decentralized Nostr network.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="ZapTok - Nostr Video Platform">
+    <meta property="og:description" content="Discover and share videos on the decentralized Nostr network.">
     <meta http-equiv="content-security-policy" content="default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; frame-src 'self' https:; font-src 'self'; base-uri 'self'; manifest-src 'self'; connect-src 'self' blob: https: wss:; img-src 'self' data: blob: https:; media-src 'self' https:">
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
