--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <meta property="og:title" content="ZapTok - Nostr Video Platform">
     <meta property="og:description" content="Discover and share videos on the decentralized Nostr network.">
     <meta http-equiv="content-security-policy" content="default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; frame-src 'self' https:; font-src 'self'; base-uri 'self'; manifest-src 'self'; connect-src 'self' blob: https: wss:; img-src 'self' data: blob: https:; media-src 'self' https:">
+    
+    <!-- Favicon and PWA Icons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/icon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/icon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon-192x192.png">
+    <link rel="shortcut icon" href="/images/icon-32x32.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="ZapTok">
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
