fix: enhance CORS security and add PWA manifest support
- Add PWA manifest.webmanifest with complete icon and metadata configuration
- Fix manifest 401 errors by adding proper manifest link to index.html
- Improve Lightning proxy CORS security to only allow ZapTok-prefixed domains
- Add current Vercel deployment domain to allowed origins
- Enhance security by preventing unauthorized access from other Vercel apps
- Add Vercel configuration file for better deployment CORS handling

These changes resolve PWA installation issues and improve overall
security while maintaining compatibility with all ZapTok deployment variants.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/images/icon-144x144.png">
     <link rel="apple-touch-icon" sizes="128x128" href="/images/icon-128x128.png">
     <link rel="shortcut icon" href="/images/icon-32x32.png">
+    
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
     <div id="root"></div>
