feat(mobile): improve PWA branding and navigation UX
Simplify app title and reorganize mobile navigation for better user
experience on mobile devices.

PWA Branding Updates:
- Change app title from "ZapTok - Nostr Video Platform" to "ZapTok"
- Update index.html page title and Open Graph/Twitter meta tags
- Update manifest.webmanifest PWA app name
- Update vite.config.ts manifest configuration
- Update About page SEO meta title

Mobile Navigation Improvements:
- Move feed/relay switcher from top navigation bar to hamburger menu
- Position switcher next to ZapTok title in menu header
- Reduce top bar clutter for cleaner mobile interface
- Improve discoverability of feed selection in settings area

Benefits:
- Cleaner, more professional appearance on mobile home screens
- More concise browser tab and social media share titles
- Better organized mobile navigation with settings grouped logically
- Improved visual hierarchy in hamburger menu

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ZapTok - Nostr Video Platform</title>
+    <title>ZapTok</title>
     <meta name="description" content="Discover and share videos on the decentralized Nostr network.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
     <meta name="theme-color" content="#000000" />
@@ -19,11 +19,11 @@
 
     <!-- Open Graph and Social Media -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="ZapTok - Nostr Video Platform">
+    <meta property="og:title" content="ZapTok">
     <meta property="og:description" content="Discover and share videos on the decentralized Nostr network.">
     <meta property="og:site_name" content="ZapTok">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="ZapTok - Nostr Video Platform">
+    <meta name="twitter:title" content="ZapTok">
     <meta name="twitter:description" content="Discover and share videos on the decentralized Nostr network.">
 
     <!-- Security Policy -->
