feat(auth): complete Welshman bunker QR login with Nostrify integration
Implement full end-to-end QR code authentication using Welshman bunker
protocol with seamless Nostrify session integration.

Core Implementation:
- useWelshmanBunkerLogin.ts - Complete bunker login hook
- useWelshmanBunkerRestoration.ts - Session persistence across refreshes
- BunkerLogin.tsx - QR code UI component with manual input support
- SignInModal.tsx - Updated with onLoginSuccess callback

Key Features:
- QR code generation with proper nostrconnect URL parameters
- Mobile detection and PWA-aware tab management
- Broker polling with timeout handling
- Dual-session management (Welshman + Nostrify)
- Automatic modal close on successful login
- LocalStorage session persistence

Critical Fixes:
- Add required 'url' and 'name' parameters to QR connection string
  * Fixes 'bad connection string' error from nsec.app
- Convert clientSecret from hex to nsec format using nip19.nsecEncode()
  * Fixes 'Invalid checksum in nsec10000...' errors
  * Ensures Nostrify compatibility with bech32-encoded keys
- Integrate Welshman and Nostrify login systems
  * Call addLogin() and setLogin() after Welshman loginWithNip46()
  * Enables useCurrentUser() to detect logged-in user
  * Triggers automatic modal close and redirect

Technical Details:
- clientSecret is session encryption key, NOT user identity
- User pubkey from bunker signer preserved as account identity
- Standard 'bunker' login type for Nostrify compatibility
- Comprehensive debug logging for troubleshooting

Tested:
- QR scan with nsec.app mobile ✅
- Approval detection and pubkey extraction ✅
- Dual-session creation ✅
- Automatic modal close ✅
- Redirect to main app ✅
- Session persistence ✅

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:description" content="Discover and share videos on the decentralized Nostr network.">
 
     <!-- Security Policy -->
-    <meta http-equiv="content-security-policy" content="default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; frame-src 'self' https:; font-src 'self'; base-uri 'self'; manifest-src 'self'; connect-src 'self' blob: https: wss:; img-src 'self' data: blob: https:; media-src 'self' blob: https:">
+    <meta http-equiv="content-security-policy" content="default-src 'none'; script-src 'self' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline'; frame-src 'self' https:; font-src 'self'; base-uri 'self'; manifest-src 'self'; connect-src 'self' blob: https: wss:; img-src 'self' data: blob: https:; media-src 'self' blob: https:">
 
     <!-- Favicon and Icons (Enhanced for Mobile) -->
     <link rel="icon" type="image/png" sizes="32x32" href="/images/icon-32x32.png">
