--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.webmanifest">
+    
+    <!-- Service Worker Registration (for PWABuilder detection) -->
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
